--- a/.github/workflows/build-kube-ovn-debug.yaml
+++ b/.github/workflows/build-kube-ovn-debug.yaml
@@ -1,9 +1,6 @@
 name: Build Debug
 on: workflow_dispatch
 
-env:
-  GO_VERSION: '1.20'
-
 jobs:
   build-debug:
     name: Build Debug
@@ -13,13 +10,11 @@ jobs:
       - uses: docker/setup-buildx-action@v2
       - uses: actions/setup-go@v3
         with:
-          go-version: '${{ env.GO_VERSION }}'
+          go-version-file: go.mod
           check-latest: true
-        id: go
 
       - name: Build
-        run: |
-          make image-debug
+        run: make image-debug
 
       - name: Push
         env:
