--- a/.github/workflows/build-windows.yaml
+++ b/.github/workflows/build-windows.yaml
@@ -20,7 +20,6 @@ concurrency:
   cancel-in-progress: true
 
 env:
-  GO_VERSION: '1.20'
   GOSEC_VERSION: '2.14.0'
 
 jobs:
@@ -132,9 +131,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v3
         with:
-          go-version: '${{ env.GO_VERSION }}'
+          go-version-file: go.mod
           check-latest: true
-        id: go
 
       - name: Export Go full version
         run: |
@@ -149,8 +147,7 @@ jobs:
             ~\AppData\Local\go-build
             ~\go\pkg\mod
           key: ${{ runner.os }}-${{ env.GO_FULL_VER }}-${{ hashFiles('**/go.sum') }}
-          restore-keys: |
-            ${{ runner.os }}-${{ env.GO_FULL_VER }}-
+          restore-keys: ${{ runner.os }}-${{ env.GO_FULL_VER }}-
 
       - name: Install gosec
         run: |
