--- a/.github/workflows/build-x86-image.yaml
+++ b/.github/workflows/build-x86-image.yaml
@@ -2,6 +2,11 @@ name: Build x86 Image
 
 on:
   pull_request:
+    types:
+      - opened
+      - synchronize
+      - reopened
+      - labeled
     branches:
     - master
     - release-*
@@ -21,42 +26,47 @@ concurrency:
   cancel-in-progress: true
 
 env:
-  GO_VERSION: '1.20'
   GOSEC_VERSION: '2.14.0'
-  KIND_VERSION: v0.17.0
   HELM_VERSION: v3.10.1
 
 jobs:
   build-kube-ovn-base:
     name: Build kube-ovn-base
     runs-on: ubuntu-22.04
+    outputs:
+      build-base: ${{ steps.build.outputs.build-base }}
     steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 2
-      - uses: docker/setup-buildx-action@v2
-        if: github.base_ref != null
-      - name: Build
+
+      - id: check
         run: |
-          touch .CI_PASSED_VAR
+          if [ ${{ github.event_name }} != 'pull_request' ]; then
+            exit
+          fi
+          if git diff --name-only HEAD^ HEAD | grep -q ^dist/images/Dockerfile.base; then
+            echo buildx=1 >> "$GITHUB_OUTPUT"
+          fi
+
+      - uses: docker/setup-buildx-action@v2
+        if: steps.check.outputs.buildx == 1
+
+      - name: Build
+        id: build
+        if: steps.check.outputs.buildx == 1
+        run: |
           if git diff --name-only HEAD^ HEAD | grep -q ^dist/images/Dockerfile.base$; then
-            echo "BUILD_BASE=1" > .CI_PASSED_VAR
-            echo "BUILD_BASE=1" >> "$GITHUB_ENV"
             make base-amd64
             make base-tar-amd64
+            echo build-base=1 >> "$GITHUB_OUTPUT"
           fi
           if git diff --name-only HEAD^ HEAD | grep -q ^dist/images/Dockerfile.base-dpdk$; then
             make base-amd64-dpdk
           fi
 
-      - name: Upload variable file to artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: variables
-          path: .CI_PASSED_VAR
-
       - name: Upload base images to artifact
-        if: env.BUILD_BASE == 1
+        if: steps.build.outputs.build-base == 1
         uses: actions/upload-artifact@v3
         with:
           name: kube-ovn-base
@@ -72,9 +82,8 @@ jobs:
       - uses: docker/setup-buildx-action@v2
       - uses: actions/setup-go@v3
         with:
-          go-version: '${{ env.GO_VERSION }}'
+          go-version-file: go.mod
           check-latest: true
-        id: go
 
       - name: Export Go full version
         run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
@@ -97,22 +106,14 @@ jobs:
         run: |
           curl -sfL https://raw.githubusercontent.com/securego/gosec/master/install.sh | sh -s -- -b $(go env GOPATH)/bin 'v${{ env.GOSEC_VERSION }}'
 
-      - name: Download variable file
-        uses: actions/download-artifact@v3
-        with:
-          name: variables
-
-      - name: Export passed variables
-        run: cat .CI_PASSED_VAR >> "$GITHUB_ENV"
-
       - name: Download base images
-        if: env.BUILD_BASE == 1
+        if: needs.build-kube-ovn-base.outputs.build-base == 1
         uses: actions/download-artifact@v3
         with:
           name: kube-ovn-base
 
       - name: Load base images
-        if: env.BUILD_BASE == 1
+        if: needs.build-kube-ovn-base.outputs.build-base == 1
         run: docker load --input image-amd64.tar
 
       - name: Build
@@ -120,7 +121,7 @@ jobs:
           go mod tidy
           git diff --exit-code
           make lint
-          if [ "x${{ env.BUILD_BASE }}" = "x1" ]; then
+          if [ ${{ needs.build-kube-ovn-base.outputs.build-base }} = 1 ]; then
             TAG=$(cat VERSION)
             docker tag kubeovn/kube-ovn-base:$TAG-amd64 kubeovn/kube-ovn-base:$TAG
             docker tag kubeovn/kube-ovn-base:$TAG-amd64-no-avx512 kubeovn/kube-ovn-base:$TAG-no-avx512
@@ -220,9 +221,8 @@ jobs:
 
       - uses: actions/setup-go@v3
         with:
-          go-version: '${{ env.GO_VERSION }}'
+          go-version-file: ${{ env.E2E_DIR }}/go.mod
           check-latest: true
-        id: go
 
       - name: Export Go full version
         run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
@@ -241,10 +241,9 @@ jobs:
         run: make e2e-compile
 
       - name: Install kind
-        run: |
-          curl -Lo ./kind https://github.com/kubernetes-sigs/kind/releases/download/${KIND_VERSION}/kind-$(uname)-amd64
-          chmod +x ./kind
-          sudo mv kind /usr/local/bin
+        uses: helm/kind-action@v1
+        with:
+          install_only: true
 
       - name: Download image
         uses: actions/download-artifact@v3
@@ -275,6 +274,7 @@ jobs:
 
   k8s-netpol-e2e:
     name: Kubernetes Network Policy E2E
+    if: github.event_name != 'pull_request' || contains(github.event.pull_request.labels.*.name, 'network policy')
     needs: build-kube-ovn
     runs-on: ubuntu-22.04
     timeout-minutes: 60
@@ -313,9 +313,8 @@ jobs:
 
       - uses: actions/setup-go@v3
         with:
-          go-version: '${{ env.GO_VERSION }}'
+          go-version-file: ${{ env.E2E_DIR }}/go.mod
           check-latest: true
-        id: go
 
       - name: Export Go full version
         run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
@@ -334,10 +333,9 @@ jobs:
         run: make e2e-compile
 
       - name: Install kind
-        run: |
-          curl -Lo ./kind https://github.com/kubernetes-sigs/kind/releases/download/${KIND_VERSION}/kind-$(uname)-amd64
-          chmod +x ./kind
-          sudo mv kind /usr/local/bin
+        uses: helm/kind-action@v1
+        with:
+          install_only: true
 
       - name: Download image
         uses: actions/download-artifact@v3
@@ -364,6 +362,7 @@ jobs:
 
   k8s-netpol-legacy-e2e:
     name: Kubernetes Network Policy Legacy E2E
+    if: github.event_name != 'pull_request' || contains(github.event.pull_request.labels.*.name, 'network policy')
     needs: build-kube-ovn
     runs-on: ubuntu-22.04
     timeout-minutes: 60
@@ -402,9 +401,8 @@ jobs:
 
       - uses: actions/setup-go@v3
         with:
-          go-version: '${{ env.GO_VERSION }}'
+          go-version-file: ${{ env.E2E_DIR }}/go.mod
           check-latest: true
-        id: go
 
       - name: Export Go full version
         run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
@@ -415,7 +413,7 @@ jobs:
           path: |
             ~/.cache/go-build
             ~/go/pkg/mod
-          key: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-${{ hashFiles('${{ env.E2E_DIR }}/**/go.sum') }}
+          key: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-${{ hashFiles(format('{0}/**/go.sum', env.E2E_DIR)) }}
           restore-keys: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-
 
       - name: Build e2e binaries
@@ -423,10 +421,9 @@ jobs:
         run: make e2e-compile
 
       - name: Install kind
-        run: |
-          curl -Lo ./kind https://github.com/kubernetes-sigs/kind/releases/download/${KIND_VERSION}/kind-$(uname)-amd64
-          chmod +x ./kind
-          sudo mv kind /usr/local/bin
+        uses: helm/kind-action@v1
+        with:
+          install_only: true
 
       - name: Download image
         uses: actions/download-artifact@v3
@@ -453,6 +450,7 @@ jobs:
 
   cyclonus-netpol-e2e:
     name: Cyclonus Network Policy E2E
+    if: github.event_name != 'pull_request' || contains(github.event.pull_request.labels.*.name, 'network policy')
     needs: build-kube-ovn
     runs-on: ubuntu-22.04
     timeout-minutes: 30
@@ -485,10 +483,9 @@ jobs:
           fi
 
       - name: Install kind
-        run: |
-          curl -Lo ./kind https://github.com/kubernetes-sigs/kind/releases/download/${KIND_VERSION}/kind-$(uname)-amd64
-          chmod +x ./kind
-          sudo mv kind /usr/local/bin
+        uses: helm/kind-action@v1
+        with:
+          install_only: true
 
       - name: Download image
         uses: actions/download-artifact@v3
@@ -525,9 +522,6 @@ jobs:
           - ipv4
           - ipv6
           - dual
-        mode:
-          - overlay
-          - underlay
     steps:
       - uses: actions/checkout@v3
 
@@ -551,9 +545,8 @@ jobs:
 
       - uses: actions/setup-go@v3
         with:
-          go-version: '${{ env.GO_VERSION }}'
+          go-version-file: ${{ env.E2E_DIR }}/go.mod
           check-latest: true
-        id: go
 
       - name: Export Go full version
         run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
@@ -572,10 +565,9 @@ jobs:
         run: make e2e-compile
 
       - name: Install kind
-        run: |
-          curl -Lo ./kind https://github.com/kubernetes-sigs/kind/releases/download/${KIND_VERSION}/kind-$(uname)-amd64
-          chmod +x ./kind
-          sudo mv kind /usr/local/bin
+        uses: helm/kind-action@v1
+        with:
+          install_only: true
 
       - name: Download image
         uses: actions/download-artifact@v3
@@ -594,14 +586,13 @@ jobs:
           sudo chown -R $(id -un). ~/.kube/
 
       - name: Install Kube-OVN
-        run: make kind-install-${{ matrix.mode }}-${{ matrix.ip-family }}
+        run: make kind-install-${{ matrix.ip-family }}
 
       - name: Run E2E
         working-directory: ${{ env.E2E_DIR }}
         env:
           E2E_BRANCH: ${{ github.base_ref || github.ref_name }}
           E2E_IP_FAMILY: ${{ matrix.ip-family }}
-          E2E_NETWORK_MODE: ${{ matrix.mode }}
         run: make kube-ovn-conformance-e2e
 
       - name: Cleanup
@@ -635,9 +626,8 @@ jobs:
 
       - uses: actions/setup-go@v3
         with:
-          go-version: '${{ env.GO_VERSION }}'
+          go-version-file: ${{ env.E2E_DIR }}/go.mod
           check-latest: true
-        id: go
 
       - name: Export Go full version
         run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
@@ -656,10 +646,9 @@ jobs:
         run: make e2e-compile
 
       - name: Install kind
-        run: |
-          curl -Lo ./kind https://github.com/kubernetes-sigs/kind/releases/download/${KIND_VERSION}/kind-$(uname)-amd64
-          chmod +x ./kind
-          sudo mv kind /usr/local/bin
+        uses: helm/kind-action@v1
+        with:
+          install_only: true
 
       - name: Download image
         uses: actions/download-artifact@v3
@@ -693,10 +682,9 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Install kind
-        run: |
-          curl -Lo ./kind https://github.com/kubernetes-sigs/kind/releases/download/${KIND_VERSION}/kind-$(uname)-amd64
-          chmod +x ./kind
-          sudo mv kind /usr/local/bin
+        uses: helm/kind-action@v1
+        with:
+          install_only: true
 
       - name: Download image
         uses: actions/download-artifact@v3
@@ -733,10 +721,9 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Install kind
-        run: |
-          curl -Lo ./kind https://github.com/kubernetes-sigs/kind/releases/download/${KIND_VERSION}/kind-$(uname)-amd64
-          chmod +x ./kind
-          sudo mv kind /usr/local/bin
+        uses: helm/kind-action@v1
+        with:
+          install_only: true
 
       - name: Download image
         uses: actions/download-artifact@v3
@@ -769,10 +756,9 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Install kind
-        run: |
-          curl -Lo ./kind https://github.com/kubernetes-sigs/kind/releases/download/${KIND_VERSION}/kind-$(uname)-amd64
-          chmod +x ./kind
-          sudo mv kind /usr/local/bin
+        uses: helm/kind-action@v1
+        with:
+          install_only: true
 
       - name: Download image
         uses: actions/download-artifact@v3
@@ -807,10 +793,9 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Install kind
-        run: |
-          curl -Lo ./kind https://github.com/kubernetes-sigs/kind/releases/download/${KIND_VERSION}/kind-$(uname)-amd64
-          chmod +x ./kind
-          sudo mv kind /usr/local/bin
+        uses: helm/kind-action@v1
+        with:
+          install_only: true
 
       - name: Download image
         uses: actions/download-artifact@v3
@@ -866,9 +851,8 @@ jobs:
 
       - uses: actions/setup-go@v3
         with:
-          go-version: '${{ env.GO_VERSION }}'
+          go-version-file: ${{ env.E2E_DIR }}/go.mod
           check-latest: true
-        id: go
 
       - name: Export Go full version
         run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
@@ -887,10 +871,9 @@ jobs:
         run: make e2e-compile
 
       - name: Install kind
-        run: |
-          curl -Lo ./kind https://github.com/kubernetes-sigs/kind/releases/download/${KIND_VERSION}/kind-$(uname)-amd64
-          chmod +x ./kind
-          sudo mv kind /usr/local/bin
+        uses: helm/kind-action@v1
+        with:
+          install_only: true
 
       - name: Download kube-ovn image
         uses: actions/download-artifact@v3
@@ -934,10 +917,9 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Install kind
-        run: |
-          curl -Lo ./kind https://github.com/kubernetes-sigs/kind/releases/download/${KIND_VERSION}/kind-$(uname)-amd64
-          chmod +x ./kind
-          sudo mv kind /usr/local/bin
+        uses: helm/kind-action@v1
+        with:
+          install_only: true
 
       - name: Download image
         uses: actions/download-artifact@v3
@@ -997,9 +979,8 @@ jobs:
 
       - uses: actions/setup-go@v3
         with:
-          go-version: '${{ env.GO_VERSION }}'
+          go-version-file: ${{ env.E2E_DIR }}/go.mod
           check-latest: true
-        id: go
 
       - name: Export Go full version
         run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
@@ -1018,10 +999,9 @@ jobs:
         run: make e2e-compile
 
       - name: Install kind
-        run: |
-          curl -Lo ./kind https://github.com/kubernetes-sigs/kind/releases/download/${KIND_VERSION}/kind-$(uname)-amd64
-          chmod +x ./kind
-          sudo mv kind /usr/local/bin
+        uses: helm/kind-action@v1
+        with:
+          install_only: true
 
       - name: Download image
         uses: actions/download-artifact@v3
@@ -1090,9 +1070,8 @@ jobs:
 
       - uses: actions/setup-go@v3
         with:
-          go-version: '${{ env.GO_VERSION }}'
+          go-version-file: ${{ env.E2E_DIR }}/go.mod
           check-latest: true
-        id: go
 
       - name: Export Go full version
         run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
@@ -1111,10 +1090,9 @@ jobs:
         run: make e2e-compile
 
       - name: Install kind
-        run: |
-          curl -Lo ./kind https://github.com/kubernetes-sigs/kind/releases/download/${KIND_VERSION}/kind-$(uname)-amd64
-          chmod +x ./kind
-          sudo mv kind /usr/local/bin
+        uses: helm/kind-action@v1
+        with:
+          install_only: true
 
       - name: Download image
         uses: actions/download-artifact@v3
@@ -1165,6 +1143,7 @@ jobs:
       - no-np-test
       - cilium-chaining-e2e
       - kube-ovn-security-e2e
+    if: always() && !contains(needs.*.result, 'failure') && !contains(needs.*.result, 'cancelled')
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
@@ -1206,7 +1185,7 @@ jobs:
           make scan
 
       - name: Push
-        if: ${{ github.ref == 'refs/heads/master' || contains(github.ref, 'release') }}
+        if: github.ref_name == github.event.repository.default_branch || startsWith(github.ref_name, 'release-')
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
