split netpol cases

--- a/Makefile.e2e
+++ b/Makefile.e2e
@@ -6,6 +6,7 @@ K8S_CONFORMANCE_E2E_FOCUS = "sig-network.*Conformance" "sig-network.*Feature:NoS
 K8S_CONFORMANCE_E2E_SKIP = "sig-network.*Services.*session affinity"
 K8S_NETPOL_E2E_FOCUS = "sig-network.*Feature:NetworkPolicy"
 K8S_NETPOL_E2E_SKIP = "sig-network.*NetworkPolicyLegacy"
+K8S_NETPOL_LEGACY_E2E_FOCUS = "sig-network.*NetworkPolicyLegacy"
 
 ifeq ($(shell test $(E2E_IP_FAMILY) != ipv6 && echo true),true)
 K8S_CONFORMANCE_E2E_FOCUS += \
@@ -37,6 +38,12 @@ k8s-conformance-e2e:
 	./test/e2e/k8s-network/e2e.test --ginkgo.timeout=1h \
 		$(call ginkgo_option,focus,$(K8S_CONFORMANCE_E2E_FOCUS)) \
 		$(call ginkgo_option,skip,$(K8S_CONFORMANCE_E2E_SKIP))
+
+.PHONY: k8s-netpol-legacy-e2e
+k8s-netpol-legacy-e2e:
+	go test ./test/e2e/k8s-network -c -o test/e2e/k8s-network/e2e.test
+	./test/e2e/k8s-network/e2e.test --ginkgo.timeout=2h \
+		$(call ginkgo_option,focus,$(K8S_NETPOL_LEGACY_E2E_FOCUS))
 
 .PHONY: k8s-netpol-e2e
 k8s-netpol-e2e:
