--- a/.github/workflows/build-x86-image.yaml
+++ b/.github/workflows/build-x86-image.yaml
@@ -75,8 +75,7 @@ jobs:
   build-kube-ovn:
     name: Build kube-ovn
     runs-on: ubuntu-22.04
-    needs:
-    - build-kube-ovn-base
+    needs: build-kube-ovn-base
     steps:
       - uses: actions/checkout@v3
       - uses: docker/setup-buildx-action@v2
@@ -178,9 +177,57 @@ jobs:
       #     name: centos8-compile
       #     path: centos8-compile.tar
 
+  build-e2e-binaries:
+    name: Build E2E Binaries
+    runs-on: ubuntu-22.04
+    timeout-minutes: 15
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Create the default branch directory
+        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        run: mkdir -p test/e2e/source
+
+      - name: Check out the default branch
+        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
+        uses: actions/checkout@v3
+        with:
+          ref: ${{ github.event.repository.default_branch }}
+          fetch-depth: 1
+          path: test/e2e/source
+
+      - name: Export E2E directory
+        run: |
+          if [ '${{ github.base_ref || github.ref_name }}' = '${{ github.event.repository.default_branch }}' ]; then
+            echo "E2E_DIR=." >> "$GITHUB_ENV"
+          else
+            echo "E2E_DIR=test/e2e/source" >> "$GITHUB_ENV"
+          fi
+
+      - uses: actions/setup-go@v3
+        with:
+          go-version-file: ${{ env.E2E_DIR }}/go.mod
+          check-latest: true
+
+      - name: Export Go full version
+        run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
+
+      - name: Go cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cache/go-build
+            ~/go/pkg/mod
+          key: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-${{ hashFiles(format('{0}/**/go.sum', env.E2E_DIR)) }}
+          restore-keys: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-
+
+      - run: make e2e-compile
+
   k8s-conformance-e2e:
     name: Kubernetes Conformance E2E
-    needs: build-kube-ovn
+    needs:
+      - build-kube-ovn
+      - build-e2e-binaries
     runs-on: ubuntu-22.04
     timeout-minutes: 60
     strategy:
@@ -197,9 +244,11 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Create the default branch directory
+        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
         run: mkdir -p test/e2e/source
 
       - name: Check out the default branch
+        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.repository.default_branch }}
@@ -228,17 +277,13 @@ jobs:
         run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
 
       - name: Go cache
-        uses: actions/cache@v3
+        uses: actions/cache/restore@v3
         with:
           path: |
             ~/.cache/go-build
             ~/go/pkg/mod
-          key: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-${{ hashFiles(format('{0}/**/go.sum', env.E2E_DIR)) }}
+          key: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-${{ hashFiles(format('{0}/**/go.sum', env.E2E_DIR)) }}
           restore-keys: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-
-
-      - name: Build e2e binaries
-        working-directory: ${{ env.E2E_DIR }}
-        run: make e2e-compile
 
       - name: Install kind
         uses: helm/kind-action@v1
@@ -275,7 +320,9 @@ jobs:
   k8s-netpol-e2e:
     name: Kubernetes Network Policy E2E
     if: github.event_name != 'pull_request' || contains(github.event.pull_request.labels.*.name, 'network policy')
-    needs: build-kube-ovn
+    needs:
+      - build-kube-ovn
+      - build-e2e-binaries
     runs-on: ubuntu-22.04
     timeout-minutes: 60
     strategy:
@@ -289,9 +336,11 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Create the default branch directory
+        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
         run: mkdir -p test/e2e/source
 
       - name: Check out the default branch
+        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.repository.default_branch }}
@@ -320,17 +369,13 @@ jobs:
         run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
 
       - name: Go cache
-        uses: actions/cache@v3
+        uses: actions/cache/restore@v3
         with:
           path: |
             ~/.cache/go-build
             ~/go/pkg/mod
           key: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-${{ hashFiles(format('{0}/**/go.sum', env.E2E_DIR)) }}
           restore-keys: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-
-
-      - name: Build e2e binaries
-        working-directory: ${{ env.E2E_DIR }}
-        run: make e2e-compile
 
       - name: Install kind
         uses: helm/kind-action@v1
@@ -363,7 +408,9 @@ jobs:
   k8s-netpol-legacy-e2e:
     name: Kubernetes Network Policy Legacy E2E
     if: github.event_name != 'pull_request' || contains(github.event.pull_request.labels.*.name, 'network policy')
-    needs: build-kube-ovn
+    needs:
+      - build-kube-ovn
+      - build-e2e-binaries
     runs-on: ubuntu-22.04
     timeout-minutes: 60
     strategy:
@@ -377,9 +424,11 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Create the default branch directory
+        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
         run: mkdir -p test/e2e/source
 
       - name: Check out the default branch
+        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.repository.default_branch }}
@@ -408,17 +457,13 @@ jobs:
         run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
 
       - name: Go cache
-        uses: actions/cache@v3
+        uses: actions/cache/restore@v3
         with:
           path: |
             ~/.cache/go-build
             ~/go/pkg/mod
           key: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-${{ hashFiles(format('{0}/**/go.sum', env.E2E_DIR)) }}
           restore-keys: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-
-
-      - name: Build e2e binaries
-        working-directory: ${{ env.E2E_DIR }}
-        run: make e2e-compile
 
       - name: Install kind
         uses: helm/kind-action@v1
@@ -465,9 +510,11 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Create the default branch directory
+        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
         run: mkdir -p test/e2e/source
 
       - name: Check out the default branch
+        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.repository.default_branch }}
@@ -512,7 +559,9 @@ jobs:
 
   kube-ovn-conformance-e2e:
     name: Kube-OVN Conformance E2E
-    needs: build-kube-ovn
+    needs:
+      - build-kube-ovn
+      - build-e2e-binaries
     runs-on: ubuntu-22.04
     timeout-minutes: 30
     strategy:
@@ -526,9 +575,11 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Create the default branch directory
+        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
         run: mkdir -p test/e2e/source
 
       - name: Check out the default branch
+        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.repository.default_branch }}
@@ -552,17 +603,13 @@ jobs:
         run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
 
       - name: Go cache
-        uses: actions/cache@v3
+        uses: actions/cache/restore@v3
         with:
           path: |
             ~/.cache/go-build
             ~/go/pkg/mod
           key: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-${{ hashFiles(format('{0}/**/go.sum', env.E2E_DIR)) }}
           restore-keys: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-
-
-      - name: Build e2e binaries
-        working-directory: ${{ env.E2E_DIR }}
-        run: make e2e-compile
 
       - name: Install kind
         uses: helm/kind-action@v1
@@ -600,16 +647,20 @@ jobs:
 
   kube-ovn-ic-conformance-e2e:
     name: Kube-OVN IC Conformance E2E
-    needs: build-kube-ovn
+    needs:
+      - build-kube-ovn
+      - build-e2e-binaries
     runs-on: ubuntu-22.04
     timeout-minutes: 30
     steps:
       - uses: actions/checkout@v3
 
       - name: Create the default branch directory
+        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
         run: mkdir -p test/e2e/source
 
       - name: Check out the default branch
+        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.repository.default_branch }}
@@ -633,17 +684,13 @@ jobs:
         run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
 
       - name: Go cache
-        uses: actions/cache@v3
+        uses: actions/cache/restore@v3
         with:
           path: |
             ~/.cache/go-build
             ~/go/pkg/mod
           key: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-${{ hashFiles(format('{0}/**/go.sum', env.E2E_DIR)) }}
           restore-keys: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-
-
-      - name: Build e2e binaries
-        working-directory: ${{ env.E2E_DIR }}
-        run: make e2e-compile
 
       - name: Install kind
         uses: helm/kind-action@v1
@@ -826,15 +873,18 @@ jobs:
     needs:
       - build-kube-ovn
       - build-vpc-nat-gateway
+      - build-e2e-binaries
     runs-on: ubuntu-22.04
     timeout-minutes: 30
     steps:
       - uses: actions/checkout@v3
 
       - name: Create the default branch directory
+        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
         run: mkdir -p test/e2e/source
 
       - name: Check out the default branch
+        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.repository.default_branch }}
@@ -858,17 +908,13 @@ jobs:
         run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
 
       - name: Go cache
-        uses: actions/cache@v3
+        uses: actions/cache/restore@v3
         with:
           path: |
             ~/.cache/go-build
             ~/go/pkg/mod
           key: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-${{ hashFiles(format('{0}/**/go.sum', env.E2E_DIR)) }}
           restore-keys: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-
-
-      - name: Build e2e binaries
-        working-directory: ${{ env.E2E_DIR }}
-        run: make e2e-compile
 
       - name: Install kind
         uses: helm/kind-action@v1
@@ -945,7 +991,9 @@ jobs:
 
   cilium-chaining-e2e:
     name: Cilium Chaining E2E
-    needs: build-kube-ovn
+    needs:
+      - build-kube-ovn
+      - build-e2e-binaries
     runs-on: ubuntu-22.04
     timeout-minutes: 30
     steps:
@@ -955,9 +1003,11 @@ jobs:
           version: '${{ env.HELM_VERSION }}'
 
       - name: Create the default branch directory
+        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
         run: mkdir -p test/e2e/source
 
       - name: Check out the default branch
+        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.repository.default_branch }}
@@ -986,17 +1036,13 @@ jobs:
         run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
 
       - name: Go cache
-        uses: actions/cache@v3
+        uses: actions/cache/restore@v3
         with:
           path: |
             ~/.cache/go-build
             ~/go/pkg/mod
           key: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-${{ hashFiles(format('{0}/**/go.sum', env.E2E_DIR)) }}
           restore-keys: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-
-
-      - name: Build e2e binaries
-        working-directory: ${{ env.E2E_DIR }}
-        run: make e2e-compile
 
       - name: Install kind
         uses: helm/kind-action@v1
@@ -1031,7 +1077,9 @@ jobs:
 
   kube-ovn-security-e2e:
     name: Kube-OVN Security E2E
-    needs: build-kube-ovn
+    needs:
+      - build-kube-ovn
+      - build-e2e-binaries
     runs-on: ubuntu-22.04
     timeout-minutes: 30
     strategy:
@@ -1051,9 +1099,11 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Create the default branch directory
+        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
         run: mkdir -p test/e2e/source
 
       - name: Check out the default branch
+        if: github.base_ref == github.event.repository.default_branch || github.ref_name == github.event.repository.default_branch
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.repository.default_branch }}
@@ -1077,17 +1127,13 @@ jobs:
         run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
 
       - name: Go cache
-        uses: actions/cache@v3
+        uses: actions/cache/restore@v3
         with:
           path: |
             ~/.cache/go-build
             ~/go/pkg/mod
           key: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-${{ hashFiles(format('{0}/**/go.sum', env.E2E_DIR)) }}
           restore-keys: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-
-
-      - name: Build e2e binaries
-        working-directory: ${{ env.E2E_DIR }}
-        run: make e2e-compile
 
       - name: Install kind
         uses: helm/kind-action@v1
