--- a/Makefile.e2e
+++ b/Makefile.e2e
@@ -39,8 +39,8 @@ endef
 .PHONY: e2e
 e2e: kube-ovn-conformance-e2e
 
-.PHONY: e2e-compile
-e2e-compile:
+.PHONY: e2e-build
+e2e-build:
 	ginkgo build ./test/e2e/k8s-network
 	ginkgo build ./test/e2e/kube-ovn
 	ginkgo build ./test/e2e/ovn-ic
@@ -91,7 +91,7 @@ kube-ovn-conformance-e2e:
 	E2E_BRANCH=$(E2E_BRANCH) \
 	E2E_IP_FAMILY=$(E2E_IP_FAMILY) \
 	E2E_NETWORK_MODE=$(E2E_NETWORK_MODE) \
-	ginkgo -p --randomize-all --focus="CNI:Kube-OVN" ./test/e2e/kube-ovn/kube-ovn.test
+	ginkgo -p --randomize-all --focus=CNI:Kube-OVN ./test/e2e/kube-ovn/kube-ovn.test
 
 .PHONY: kube-ovn-ic-conformance-e2e
 kube-ovn-ic-conformance-e2e:
@@ -99,7 +99,7 @@ kube-ovn-ic-conformance-e2e:
 	E2E_BRANCH=$(E2E_BRANCH) \
 	E2E_IP_FAMILY=$(E2E_IP_FAMILY) \
 	E2E_NETWORK_MODE=$(E2E_NETWORK_MODE) \
-	ginkgo -p --randomize-all --focus="CNI:Kube-OVN" ./test/e2e/ovn-ic/ovn-ic.test
+	ginkgo -p --randomize-all --focus=CNI:Kube-OVN ./test/e2e/ovn-ic/ovn-ic.test
 
 .PHONY: kube-ovn-lb-svc-conformance-e2e
 kube-ovn-lb-svc-conformance-e2e:
@@ -107,7 +107,7 @@ kube-ovn-lb-svc-conformance-e2e:
 	E2E_BRANCH=$(E2E_BRANCH) \
 	E2E_IP_FAMILY=$(E2E_IP_FAMILY) \
 	E2E_NETWORK_MODE=$(E2E_NETWORK_MODE) \
-	ginkgo -p --randomize-all --focus="CNI:Kube-OVN" ./test/e2e/lb-svc/lb-svc.test
+	ginkgo -p --randomize-all --focus=CNI:Kube-OVN ./test/e2e/lb-svc/lb-svc.test
 
 .PHONY: kube-ovn-eip-conformance-e2e
 kube-ovn-eip-conformance-e2e:
@@ -115,7 +115,7 @@ kube-ovn-eip-conformance-e2e:
 	E2E_BRANCH=$(E2E_BRANCH) \
 	E2E_IP_FAMILY=$(E2E_IP_FAMILY) \
 	E2E_NETWORK_MODE=$(E2E_NETWORK_MODE) \
-	ginkgo -p --randomize-all --focus="CNI:Kube-OVN" ./test/e2e/ovn-eip/ovn-eip.test
+	ginkgo -p --randomize-all --focus=CNI:Kube-OVN ./test/e2e/ovn-eip/ovn-eip.test
 
 .PHONY: kube-ovn-security-e2e
 kube-ovn-security-e2e:
@@ -123,4 +123,4 @@ kube-ovn-security-e2e:
 	E2E_BRANCH=$(E2E_BRANCH) \
 	E2E_IP_FAMILY=$(E2E_IP_FAMILY) \
 	E2E_NETWORK_MODE=$(E2E_NETWORK_MODE) \
-	ginkgo -p --randomize-all --focus="CNI:Kube-OVN" ./test/e2e/security/security.test
+	ginkgo -p --randomize-all --focus=CNI:Kube-OVN ./test/e2e/security/security.test
